Fixed table overflow issue.

--- a/styles/General.module.css
+++ b/styles/General.module.css
@@ -7,8 +7,9 @@
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	font-size: 1rem;
 	font-weight: 300;
+	width: 100%;
 	height: 100%;
-	overflow: auto;
+	overflow-y: auto;
 }
 .content > hr {
 	width: 100%;
