--- a/styles/PageWrapper.module.css
+++ b/styles/PageWrapper.module.css
@@ -8,15 +8,16 @@
 	flex-shrink: 1;
 	flex-basis: 1;
 	width: 100%;
+	min-height: 0;
 	margin: 0;
 	padding: 0;
 	display: flex;
 	flex-direction: row;
-	overflow: auto;
 }
 
 .content {
-	margin: 0 2%;
+	padding: 0 2%;
+	width: 100%;
 	height: 100%;
 }
 
